# libtextworker

./: .gitbook.yaml  .gitignore  .gitmodules  Items.txt  Makefile  README.md  a00008_source.html  a00011_source.html  a00014_source.html  a00017_source.html  a00047_source.html  a00050_source.html  a00056_source.html  a00071_source.html  a00077_source.html  a00083.html  a00085.html  a00085_a274cab3285f9153159c54cec4c7e1f91.html  a00085_a274cab3285f9153159c54cec4c7e1f91_a274cab3285f9153159c54cec4c7e1f91_cgraph.map  a00085_a274cab3285f9153159c54cec4c7e1f91_a274cab3285f9153159c54cec4c7e1f91_cgraph.md5  a00085_a32ad729a3db355ba79670a6429904a23.html  a00085_a44c191378b85632e1297eedc7d17fdc1.html  a00085_a7f947e8904cbd2301ce243a345b625fb.html  a00085_a976df9cde49e6e61f962e8ef489fc054.html  a00085_aa8bbe359727bc2bb67f5b82456c2d570.html  a00085_aa8bbe359727bc2bb67f5b82456c2d570_aa8bbe359727bc2bb67f5b82456c2d570_cgraph.map  a00085_aa8bbe359727bc2bb67f5b82456c2d570_aa8bbe359727bc2bb67f5b82456c2d570_cgraph.md5  a00086.html  a00087.html  a00088.html  a00089.html  a00090.html  a00091.html  a00092.html  a00093.html  a00094.html  a00095.html  a00096.html  a00097.html  a00098.html  (+302 more)
.github/workflows/: doxygen-gh-pages.yml
d0/d30/: md_README.html
d0/d81/: namespacelibtextworker_1_1interface_1_1wx_1_1constants.html
d0/d84/: classlibtextworker_1_1general_1_1libTewException__coll__graph.map  classlibtextworker_1_1general_1_1libTewException__coll__graph.md5
d0/de7/: classlibtextworker_1_1general_1_1Logger.html  classlibtextworker_1_1general_1_1Logger.js
d1/d32/: classlibtextworker_1_1interface_1_1wx_1_1editor_1_1StyledTextControl-members.html
d1/d33/: miscs_8py.html  miscs_8py.js
d1/d9d/: classlibtextworker_1_1get__config_1_1ConfigurationError.html  classlibtextworker_1_1get__config_1_1ConfigurationError.js
d1/dae/: classlibtextworker_1_1interface_1_1wx_1_1dirctrl_1_1PatchedDirCtrl.html  classlibtextworker_1_1interface_1_1wx_1_1dirctrl_1_1PatchedDirCtrl.js
d1/dd1/: classlibtextworker_1_1interface_1_1wx_1_1ColorManager.html  classlibtextworker_1_1interface_1_1wx_1_1ColorManager.js
d1/dd6/: classlibtextworker_1_1interface_1_1wx_1_1editor_1_1DragNDropTarget__coll__graph.map  classlibtextworker_1_1interface_1_1wx_1_1editor_1_1DragNDropTarget__coll__graph.md5
d2/d56/: interface_2wx_2____init_____8py.html  interface_2wx_2____init_____8py.js
d2/da1/: namespacelibtextworker_1_1interface_1_1tk_1_1textwidget.html  (+1 more)
docs/: Doxyfile  README.md  SUMMARY.md  header.html  index.md
libtextworker/: __init__.py  _importer.py  general.py  get_config.py  meson.build  versioning.py
libtextworker/interface/: __init__.py  _colors.py  constants.py  manager.py  mergelist.json  meson.build
libtextworker/interface/base/: __init__.py  dirctrl.py
libtextworker/interface/tk/: __init__.py  about.py  actionrow.py  constants.py  dirctrl.py  editor.py  findreplace.py  miscs.py  textwidget.py
libtextworker/interface/tk/dialogs/: about.py
libtextworker/interface/wx/: __init__.py  about.py  actionrow.py  constants.py  dirctrl.py  editor.py  meson.build  miscs.py
libtextworker/licenses/: AGPL_short.txt  GPL3_short.txt  meson.build
libtextworker/syntaxhighlight/: README.md  python.ini
po/: POTFILES  libtextworker.pot  meson.build  vi.po
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+47 more)
tests/: __init__.py  custom_theme.ini  test_clean.py  test_configs.py  test_tk.py  test_wx.py
(+292 files in other folders)
