[tool.poetry]
name = "libtextworker"
version = "0.1.1"
description = "App library for textworker"
authors = ["lebao3105 <bao12345yocoo@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/lebao3105/libtextworker"
documentation = "https://lebao3105.github.io/libtextworker"
keywords = ["wx", "tkinter", "gui"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lebao3105/libtextworker/issues"

[tool.poetry.dependencies]
python = "^3.8"
configparser = "^5.3.0"
Pillow = "^9.5.0"
packaging = "^23.0"
importlib-metadata = "^6.1.0"

wxPython = {version = "^4.0.0", optional = true}
sv-ttk = {version = "^2.4.3", optional = true}

[tool.poetry.plugins."libtextworker"]
wx = "libtextworker.interface.wx:_entry_point"
tkinter = "libtextworker.interface.tk:_entry_point"

[tool.poetry.extras]
wx = ["wxPython"]
tkinter = ["sv-ttk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
