[tool.poetry]
name = "libtextworker"
version = "0.1.4"
description = "An universal library for Python projects"
authors = ["lebao3105 <bao12345yocoo@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/lebao3105/libtextworker"
documentation = "https://lebao3105.github.io/libtextworker"
keywords = ["wx", "tkinter", "gui"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lebao3105/libtextworker/issues"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^23.0"
importlib-metadata = "^6.1.0"
commented-configparser = "^1.0.0"

wxPython = {version = "^4.0.0", optional = true}
darkdetect = {version = "^0.8.0", optional = true}
tklinenums = {version = "^1.6.5", optional = true}
watchdog = {version = "^3.0.0", optional = true}

[tool.poetry.extras]
wx = ["wxPython", "watchdog"]
tkinter = ["tklinenums", "watchdog"]
autocolor = ["darkdetect"]
all = ["darkdetect", "wxPython", "commented-configparser", "tklinenums", "watchdog"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
